post and blog page template done

--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,17 @@
       </div>
     </nav>
     <section class="section">
-        <div class="section__container">
-          <div class="content">
+      <div class="section__container">
+        <div class="content">
+          <!-- Existing content -->
+          <div class="items-list">
+            <a href="blog1.html" class="item-link">
+              <div class="item">
+                <h3 class="item-title">Blog 1</h3>
+                <p class="item-description">Short description of the item goes here. It can be about two to three sentences long.</p>
+              </div>
+            </a>
+            <!-- Add more items as needed -->
           </div>
         </div>
-    </section>    
+  </section>    
