--- a/posts.html
+++ b/posts.html
@@ -33,6 +33,15 @@
     <section class="section">
         <div class="section__container">
           <div class="content">
+            <!-- Existing content -->
+            <div class="items-list">
+              <a href="post1.html" class="item-link">
+                <div class="item">
+                  <h3 class="item-title">Post 1</h3>
+                  <p class="item-description">Short description of the item goes here. It can be about two to three sentences long.</p>
+                </div>
+              </a>
+              <!-- Add more items as needed -->
+            </div>
           </div>
-        </div>
     </section>    
