about and tutorial sections

--- a/about.html
+++ b/about.html
@@ -31,8 +31,42 @@
       </div>
     </nav>
     <section class="section">
-        <div class="section__container">
+        <div class="section__container-home">
           <div class="content">
+            <h2 class="lead-title-about">About Me</h1>
+            <p class="description">
+              Hello! I'm Nader, a software engineer and a current Master's 
+              student in Computer Science at the University of Ottawa. My 
+              research is focused on computational geometry and graph theory. 
+              My other fields of interest include data structures, approximation 
+              algorithms, and computational complexity.
+            </p>
+            <h2 class="title">Academic Journey</h1>
+            <p class="description">
+              My journey in computer science began in my junior year of high school
+              where I took a computer science course. I quickly fell in love with the field
+              and decided to enroll in a BASc of Software Engineering at the University of Ottawa.
+              During my studies I was able to gain experience in various applications of Software 
+              Engineering such as: web development, databases, project management, data science, 
+              and artificial intelligence. However, the courses that intriguied me the most were courses
+              that were more fundamentally theoretical. That is what drove me to pursue a Masters in 
+              Computer Science upon completion of my Bachelor's degree.
+            </p>
+            <h2 class="title">Professional Experience</h1>
+            <p class="description">
+              Throughout my studies I've had the opportunity to work various internships which have helped
+              me develop a broad skillset. I've worked professionally on a web development team, as a cloud computing engineer, 
+              on a machine learning project, and as an embedded systems engineer. Currently I am working as a researcher
+              in computational geometry/graph theory.
+            </p>
+            <h2 class="title">Looking Ahead</h1>
+            <p class="description">
+              My current goal is to complete my Masters and publish my thesis. While working towards this I would like to 
+              contribute to public knowledge by tackling open problems, detailing and experimenting with novel algorithms,
+              and providing tutorials and lessons on various topics. All of which I will host on this website.
+            </p>
           </div>
         </div>
     </section>    
+  </body>
+  </html>
