--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
         <div class="content">
           <!-- Existing content -->
           <div class="items-list">
-            <a href="blog1.html" class="item-link">
+            <a href="blog1.html" class="item-link" target="_blank">
               <div class="item">
                 <h3 class="item-title">Blog 1</h3>
                 <p class="item-description">Short description of the item goes here. It can be about two to three sentences long.</p>
@@ -44,4 +44,6 @@
             <!-- Add more items as needed -->
           </div>
         </div>
-  </section>    
+  </section>   
+</body>
+</html> 
