--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </nav>
     <section class="section">
-      <div class="section__container">
+      <div class="section__container-home">
         <div class="content">
           <p class="subtitle">HELLO</p>
           <h1 class="title">
