--- a/posts.html
+++ b/posts.html
@@ -35,7 +35,7 @@
           <div class="content">
             <!-- Existing content -->
             <div class="items-list">
-              <a href="post1.html" class="item-link">
+              <a href="post1.html" class="item-link" target="_blank">
                 <div class="item">
                   <h3 class="item-title">Post 1</h3>
                   <p class="item-description">Short description of the item goes here. It can be about two to three sentences long.</p>
@@ -45,3 +45,5 @@
             </div>
           </div>
     </section>    
+  </body>
+  </html>
