--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>NaderEG | Contact</title>
-  </head>
-  <body>
+</head>
+<body>
     <nav>
-      <div class="nav__content">
-        <div class="logo"><a href="#">NaderEG</a></div>
-        <label for="check" class="checkbox">
-          <i class="ri-menu-line"></i>
-        </label>
-        <input type="checkbox" name="check" id="check" />
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="posts.html">Posts</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+        <div class="nav__content">
+            <div class="logo"><a href="#">NaderEG</a></div>
+            <label for="check" class="checkbox">
+                <i class="ri-menu-line"></i>
+            </label>
+            <input type="checkbox" name="check" id="check"/>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="posts.html">Posts</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="tutorials.html">Tutorials</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </nav>
     <section class="section">
         <div class="section__container">
-          <div class="content">
-          </div>
+            <div class="content">
+                <h2>Contact Information</h2>
+                <p>If you have any questions or just want to say hello, feel free to get in touch with me through the following channels:</p>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="ri-mail-line"></i>
+                        <a href="mailto:nader.elghotmi@gmail.com">nader.elghotmi@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="ri-phone-line"></i>
+                        <a href="tel:+1 613-252-8285">+1 613-252-8285</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="ri-linkedin-box-fill"></i>
+                        <a href="https://www.linkedin.com/in/nader-el-ghotmi-9465192b5/" target="_blank">Nader El-Ghotmi</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>    
+    </section>
+</body>
+</html>
