resume and blog

--- a/resume.html
+++ b/resume.html
@@ -30,11 +30,132 @@
         </ul>
       </div>
     </nav>
-    <section class="section">
-        <div class="section__container">
-          <div class="content">
+    <section class="section resume">
+      <div class="section__container resume__container">
+          <!-- Left Column for Personal Information -->
+          <div class="resume__info">
+              <div class="info__image">
+                  <img src="assets/profile.JPG" alt="Nader El-Ghotmi">
+              </div>
+              <h1 class="info__name">Nader El-Ghotmi</h1>
+              <p class="info__role">Software Engineer / Computer Scientist</p>
+              <h2 class="info__subtitle">Skills</h2>
+              <div >
+                  <ul>
+                      <li>Programming: Python, C, C++, Java, Go, Prolog, Scheme</li>
+                    </ul>
+                    <ul><li>Web Development: HTML, CSS, JavaScript, React</li></ul>
+                    <ul><li>Mobile Development: React Native, Android Studio</li></ul>
+
+            </div>
+              <h2 class="info__subtitle">Contact</h2>
+              <div class="contact-info">
+                <div class="contact-item">
+                    <i class="ri-mail-line"></i>
+                    <a href="mailto:nader.elghotmi@gmail.com">nader.elghotmi@gmail.com</a>
+                </div>
+                <div class="contact-item">
+                    <i class="ri-phone-line"></i>
+                    <a href="tel:+1 613-252-8285">+1 613-252-8285</a>
+                </div>
+                <div class="contact-item">
+                    <i class="ri-linkedin-box-fill"></i>
+                    <a href="https://www.linkedin.com/in/nader-el-ghotmi-9465192b5/" target="_blank">Nader El-Ghotmi</a>
+                </div>
+            </div>
           </div>
-        </div>
-    </section>    
+          <!-- Right Column for Skills, Education, and Job Experience -->
+        <div class="resume__details">
+          <div class="details__section education">
+              <h2 class="subtitle">Education & Awards</h2>
+              <h3>Master of Computer Science at University of Ottawa (2023-Current)</h3>
+              <p>Leading a research project focused on developing a local routing algorithm for a novel graph structure known as an emanation graph.</p>
+              <p>Exploring advanced topics such as: Computational Geometry, Computational Complexity Theory, Approximation Algorithms, Advanced Data Structures, and Quantum Computing.
+              <p>Creating formal mathematical proofs to support my research.</p>
+              <h3>BASc Software Engineering at University of Ottawa (2018-2023)</h3>
+              <p>Graduated Magna Cum Laude with a CGPA of 8.86/10.</p>
+              <p>Admissions Scholarship & Dean's Honour List</p>
+          </div>
+          <div class="details__section experience">
+              <h2 class="subtitle">Work Experience</h2>
+              <div>
+                  <h3>Ford Motor Company - Software Developer, Summer 2022</h3>
+                  <ul>
+                      <li>Diagnosed and resolved issues within telecommunications software utilizing C.</li>
+                      <li>Enhanced a Python script for sideloading applications onto telecommunications devices, adhering to company coding standards.</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>Statistics Canada - Data Scientist, Summer 2021</h3>
+                  <ul>
+                      <li>Developed pipeline architecture for image recognition software in Python.</li>
+                      <li>Generated a machine learning model training dataset via Google Streetview API.</li>
+                      <li>Optimized machine learning models by adjusting transformation layers.</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>Department of National Defense - Research and Innovation Student, Fall 2020</h3>
+                  <ul>
+                      <li>Authored a research paper on chatbot applications within the defense sector.</li>
+                      <li>Developed a Dialogflow-based chatbot prototype, presenting its potential and use cases to department officials.</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>Communications Research Centre - Cloud Systems Developer, Winter 2020</h3>
+                  <ul>
+                      <li>Implemented IT automation within CRC's cloud infrastructure using Ansible.</li>
+                      <li>Developed Python scripts for Azure Blob Storage data retrieval and AWS inventory configuration.</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>Health Canada - Junior Developer, Summer 2019</h3>
+                  <ul>
+                      <li>Supported application development in Angular, ensuring adherence to government WET4 and Accessibility standards.</li>
+                      <li>Managed bug reports and test case creation using Jira.</li>
+                  </ul>
+              </div>
+          </div>
+          <div class="details__section projects">
+              <h2 class="subtitle">Projects</h2>
+              <div>
+                  <h3>Shipi (uOttawa Capstone Project)</h3>
+                  <ul>
+                      <li>Played a pivotal role in developing a React-Native mobile application for a startup company.</li>
+                      <li>Designed a matching algorithm to match drivers with shipments in a similar fashion to Uber.</li>
+                      <li>Implemented comprehensive test suites for backend and frontend functionalities.</li>
+                  </ul>
+              </div>
+              <div>
+                <h3>CVM Algorithm Accuracy Analysis - Research Project</h3>
+                <ul>
+                    <li>Implemented a new algorithm for estimating the Count-Distinct Problem in Python.</li>
+                    <li>Provided a runtime analysis of the algorithm and proof of its viability in a research paper.</li>
+                    <li>Conducted a thorough analysis of the accuracy of the algorithm.</li>
+                </ul>
+            </div>
+              <div>
+                  <h3>uOttawa Rocketry Team</h3>
+                  <ul>
+                      <li>Engineered software in C and utilized Arduino libraries to gather sensor data, developing an algorithm for precise air brake deployment based on altitude and velocity.</li>
+                      <li>Created a Python script for simulating flight paths and validating the algorithm's efficiency through serial communication with Arduino.</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>Blockchain</h3>
+                  <ul>
+                      <li>Developed a secure blockchain prototype in C++, incorporating cryptography for enhanced security and implementing features for transactions and wallets.</li>
+                  </ul>
+              </div>
+              <div>
+                  <h3>Turn-based Role Playing Game</h3>
+                  <ul>
+                      <li>Designed and developed a Java-based RPG, utilizing object-oriented programming for character creation and Java Swing for UI design.</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+  
   </body>
   </html>
