--- a/blog.html
+++ b/blog.html
@@ -35,10 +35,10 @@
         <div class="content">
           <!-- Existing content -->
           <div class="items-list">
-            <a href="blog1.html" class="item-link" target="_blank">
+            <a href="blogs/cvm-algorithm.html" class="item-link" target="_blank">
               <div class="item">
-                <h3 class="item-title">Blog 1</h3>
-                <p class="item-description">Short description of the item goes here. It can be about two to three sentences long.</p>
+                <h3 class="item-title">The CVM Algorithm</h3>
+                <p class="item-description">An Algorithm for Estimating the Number of Unique Elements in a Data Stream</p>
               </div>
             </a>
             <!-- Add more items as needed -->
