--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="assets/profile.jpg" alt="profile" />
+          <img src="assets/profile.JPG" alt="profile" />
         </div>
       </div>
     </section>
