finished cvm blog

--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
         <div class="content">
           <!-- Existing content -->
           <div class="items-list">
-            <a href="blogs/cvm-algorithm.html" class="item-link" target="_blank">
+            <a href="blogs/cvm-algorithm/cvm-algorithm.html" class="item-link" target="_blank">
               <div class="item">
                 <h3 class="item-title">The CVM Algorithm</h3>
                 <p class="item-description">An Algorithm for Estimating the Number of Unique Elements in a Data Stream</p>
