--- a/tutorials.html
+++ b/tutorials.html
@@ -60,6 +60,11 @@
           <p class="video-caption">Lesson 1: Intro to Data Stuctures & Big-O</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+        <button class="accordion">Advanced Data Structures</button>
+        <div class="panel">
+          <p class="video-caption">Treaps</p>
+            <iframe width="560" height="315" src="https://youtu.be/NoymJSlIXVI?si=llpKwWlMNQisyfN0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
       </div>
     </div>
   </section>
