--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             I'm <span>Nader<br /></span>
           </h1>
           <p class="description">
-            Welcome to my digital corner! My name is Nader, a software engineer 
-            and graduate of the University of Ottawa. I am currently pursuing 
-            a Masters in Computer Science, focusing on graph theory and 
-            computational geometry. To find out more about me, head over to the About or Resume section. 
+            Welcome to my digital corner! My name is Nader, a masters student at the University of Ottawa. 
+            I have a degree in Software Engineering and am currently pursuing a Masters in theoretical computer science,
+            so I suppose you could say I'm theoretically a software engineer.
+            To find out more about me, head over to the About or Resume section. 
             In the Posts section, I'll share intriguing snippets, problems, or facts 
             that capture my interest. For more comprehensive discussions on algorithms 
             or complex problems, head over to the Blog section.
