--- a/tutorials.html
+++ b/tutorials.html
@@ -63,7 +63,7 @@
         <button class="accordion">Advanced Data Structures</button>
         <div class="panel">
           <p class="video-caption">Treaps</p>
-            <iframe width="560" height="315" src="https://youtu.be/NoymJSlIXVI?si=llpKwWlMNQisyfN0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/NoymJSlIXVI?si=l8r7mSuOMf2rK-yj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
       </div>
     </div>
